--- a/index.html
+++ b/index.html
@@ -67,29 +67,12 @@
             transform: scale(1.05) rotate(2deg);
             z-index: 10;
         }
-        
-        /* CRITICAL FIX FOR IPHONE MUSIC:
-           The player must be inside the screen boundaries (bottom-right) 
-           and have slight opacity to be considered "active" by the browser.
-        */
-        #player {
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            width: 1px;
-            height: 1px;
-            opacity: 0.01; /* Invisible to eye, visible to browser logic */
-            pointer-events: none;
-            z-index: -1;
-        }
     </style>
 </head>
 <body class="text-gray-700 font-body min-h-screen flex flex-col items-center justify-center relative">
 
     <div class="blob bg-pink-300 w-64 h-64 rounded-full top-0 left-0 mix-blend-multiply"></div>
     <div class="blob bg-purple-300 w-64 h-64 rounded-full bottom-0 right-0 mix-blend-multiply animation-delay-2000"></div>
-
-    <div id="player"></div>
 
     <section id="section-landing" class="text-center z-10 w-full max-w-md px-4">
         <h1 class="font-header text-4xl md:text-5xl text-deepRose mb-8">
@@ -195,27 +178,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     
-    <script src="https://www.youtube.com/iframe_api"></script>
-
     <script>
-        // --- MUSIC SETUP ---
-        var player;
-        function onYouTubeIframeAPIReady() {
-            player = new YT.Player('player', {
-                height: '1', // Must be 1px
-                width: '1',  // Must be 1px
-                videoId: 'KvSxWV9rcbw', 
-                playerVars: {
-                    'autoplay': 0, 
-                    'controls': 0, 
-                    'loop': 1,
-                    'playlist': 'KvSxWV9rcbw',
-                    'playsinline': 1, // Crucial for iPhone
-                    'origin': window.location.origin 
-                }
-            });
-        }
-
         // --- MAIN ANIMATIONS ---
         const landing = document.getElementById('section-landing');
         const celebration = document.getElementById('section-celebration');
@@ -240,16 +203,8 @@
             ease: "sine.inOut"
         });
 
-        // --- OPEN GIFT & PLAY MUSIC ---
+        // --- OPEN GIFT ---
         function openGift() {
-            // Attempt to play music
-            if (player && typeof player.playVideo === 'function') {
-                player.playVideo();
-                player.setVolume(100); 
-            } else {
-                console.log("Player waiting for interaction...");
-            }
-
             const tl = gsap.timeline({
                 onComplete: () => {
                     landing.style.display = 'none';
@@ -325,7 +280,7 @@
         }
 
         function triggerFinalSurprise() {
-            var duration = 2.5 * 1000; // Increased slighty for effect
+            var duration = 2.5 * 1000;
             var end = Date.now() + duration;
 
             (function frame() {
