--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             }());
 
             setTimeout(() => {
-                window.location.href = "https://xyz1-git-main-crackshash-mods-projects.vercel.app/";
+                window.location.href = "https://gitignore-virid.vercel.app/";
             }, 2500);
         }
     </script>
